# napari-bigwarp

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  requirements.txt  setup.cfg  tox.ini
docs/: index.md
src/napari_bigwarp/: __init__.py  _bigwarp_widget.py  bigwarp.py
src/napari_bigwarp/_tests/: test_dock_widget.py  test_function.py
