[metadata]
name = napari_bigwarp
version = 0.0.1
description = BigWarp-like interface for napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bkntr/napari-bigwarp
author = Ben Kantor
author_email = benkantor@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/bkntr/napari-bigwarp/issues
    Documentation = https://github.com/bkntr/napari-bigwarp#README.md
    Source Code = https://github.com/bkntr/napari-bigwarp
    User Support = https://github.com/bkntr/napari-bigwarp/issues

[options]
packages = find:
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    opencv-contrib-python
    opencv-python
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    napari-bigwarp = napari_bigwarp
